--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     </header>
     <!-- ヘッダーここまで -->
 
+    <div class="main">
+      <div class="main-visual">
+        <h1>Lorem Ipsum</h1>
+        <p>simply dummy text of the printing</p>
+      </div>
+    </div>
+
 
     <!-- フッター -->
     <!-- フッターここまで -->
