--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b2cb5fa4fa.js" crossorigin="anonymous"></script>
     <title>MySite</title>
   </head>
 
@@ -18,17 +19,59 @@
         <div class="nav-item">Contact</div>
       </nav>
     </header>
-    <!-- ヘッダーここまで -->
 
     <div class="main">
+
+      <!-- メインビジュアル -->
       <div class="main-visual">
         <h1>Lorem Ipsum</h1>
         <p>simply dummy text of the printing</p>
       </div>
+
+      <!-- ポートフォリオ -->
+      <div class="portfolio">
+        <h2>Portfolio</h2>
+        <p>
+          It is a long established fact that a reader will be distracted by the readable<br>
+          content of a page when looking at its layout.<br>
+          The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="p-images">
+          <div class="p-img"></div>
+          <div class="p-img"></div>
+          <div class="p-img"></div>
+          <div class="p-img"></div>
+          <div class="p-img"></div>
+          <div class="p-img"></div>
+        </div>
+      </div>
+      <!-- フィーチャー -->
+      <h2>Feature</h2>
+      <p>
+        It is a long established fact that a reader will be distracted by the readable<br>
+        content of a page when looking at its layout.<br>
+        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+      </p>
+      <div class="strengthes">
+        <div class="strength">
+          <i class="fas fa-code"></i>
+          <h6>Strength1</h6>
+          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+        </div>
+        <div class="strength">
+          <i class="fas fa-desktop"></i>
+          <h6>Strength2</h6>
+          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+        </div>
+        <div class="strength">
+          <i class="fas fa-cogs"></i>
+          <h6>Strength3</h6>
+        </div>
+      </div>
+
     </div>
 
 
     <!-- フッター -->
-    <!-- フッターここまで -->
   </body>
 </html>
