--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="p-img"></div>
         </div>
       </div>
-      <!-- フィーチャー -->
+      <!-- Feature -->
       <div class="feature">
         <h2>Feature</h2>
         <p>
@@ -68,6 +68,31 @@
             <i class="fas fa-cogs icon"></i>
             <h6>Strength3</h6>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Profile -->
+      <div class="profile">
+        <h2>Profile</h2>
+        <p>
+          It is a long established fact that a reader will be distracted by the readable<br>
+          content of a page when looking at its layout.<br>
+          The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="profile-container">
+          <div class="image-container">
+            <div class="profile-image"></div>
+          </div>
+          <div class="profile-content">
+            <div class="name">
+              <h6>MyName</h6>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+            </div>
+            <div class="skill">
+              <h6>MySkills</h6>
+              <p>HTML/CSS,JavaScript,JQuery,PhotoShop</p>
+            </div>
           </div>
         </div>
       </div>
