--- a/index.html
+++ b/index.html
@@ -97,6 +97,36 @@
         </div>
       </div>
 
+      <!-- Contact -->
+      <div class="contact">
+        <div class="title">
+          <h2>Contact</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.<br>
+            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+          </p>
+        </div>
+        <div class="contact-container">
+          <div class="contact-contents">
+            <div class="mail">
+              <h6>Mail</h6>
+              <a href="mailto:xxx@xxx.com">xxx@xxx.com</a>
+            </div>
+            <div class="tel">
+              <h6>Tel</h6>
+              <a href="tel:000-0000-0000">000-0000-0000</a>
+            </div>
+          </div>
+          <div class="sns">
+            <h6>SNS</h6>
+            <i class="fab fa-facebook-f sns-icon"></i>
+            <i class="fab fa-twitter sns-icon"></i>
+            <i class="fab fa-instagram sns-icon"></i>
+          </div>
+        </div>
+      </div>
+
     </div>
 
 
