[Fix]Contact中央寄せの修正

--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
               <a href="tel:000-0000-0000">000-0000-0000</a>
             </div>
           </div>
-          <div class="sns">
-            <h6>SNS</h6>
-            <i class="fab fa-facebook-f sns-icon"></i>
-            <i class="fab fa-twitter sns-icon"></i>
-            <i class="fab fa-instagram sns-icon"></i>
+          <div class="sns-container">
+            <div class="sns">
+              <h6>SNS</h6>
+              <i class="fab fa-facebook-f sns-icon"></i>
+              <i class="fab fa-twitter sns-icon"></i>
+              <i class="fab fa-instagram sns-icon"></i>
+          </div>
           </div>
         </div>
       </div>
@@ -130,6 +132,6 @@
     </div>
 
 
-    <!-- フッター -->
+    <!-- Footer -->
   </body>
 </html>
