--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
           </div>
         </div>
       </div>
-
     </div>
 
-
     <!-- Footer -->
+    <footer>©︎ 2017 WebCamp</footer>
   </body>
 </html>
