ヘッダーにリンク設定

--- a/index.html
+++ b/index.html
@@ -12,24 +12,34 @@
     <!-- ヘッダー -->
     <header>
       <nav>
-        <img class="nav-img" src="img/logo.png">
-        <div class="nav-item">Portfolio</div>
-        <div class="nav-item">Feature</div>
-        <div class="nav-item">Profile</div>
-        <div class="nav-item">Contact</div>
+        <a class="noline" id="nav-image" href="#main-v">
+          <img class="nav-img" src="img/logo.png">
+        </a>
+        <a class="noline" href="#Portfolio">
+          <div class="nav-item">Portfolio</div>
+        </a>
+        <a class="noline" href="#Feature">
+          <div class="nav-item">Feature</div>
+        </a>
+        <a class="noline" href="#Profile">
+          <div class="nav-item">Profile</div>
+        </a>
+        <a class="noline" href="#Contact">
+          <div class="nav-item">Contact</div>
+        </a>
       </nav>
     </header>
 
     <div class="main">
 
       <!-- メインビジュアル -->
-      <div class="main-visual">
+      <div class="main-visual" id="main-v">
         <h1>Lorem Ipsum</h1>
         <p>simply dummy text of the printing</p>
       </div>
 
       <!-- ポートフォリオ -->
-      <div class="portfolio">
+      <div class="portfolio" id="Portfolio">
         <h2>Portfolio</h2>
         <p>
           It is a long established fact that a reader will be distracted by the readable<br>
@@ -46,7 +56,7 @@
         </div>
       </div>
       <!-- Feature -->
-      <div class="feature">
+      <div class="feature" id="Feature">
         <h2>Feature</h2>
         <p>
           It is a long established fact that a reader will be distracted by the readable<br>
@@ -73,7 +83,7 @@
       </div>
 
       <!-- Profile -->
-      <div class="profile">
+      <div class="profile" id="Profile">
         <h2>Profile</h2>
         <p>
           It is a long established fact that a reader will be distracted by the readable<br>
@@ -98,7 +108,7 @@
       </div>
 
       <!-- Contact -->
-      <div class="contact">
+      <div class="contact" id="Contact">
         <div class="title">
           <h2>Contact</h2>
           <p>
