レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b2cb5fa4fa.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MySite</title>
   </head>
 
@@ -40,19 +41,21 @@
 
       <!-- ポートフォリオ -->
       <div class="portfolio" id="Portfolio">
-        <h2>Portfolio</h2>
-        <p>
-          It is a long established fact that a reader will be distracted by the readable<br>
-          content of a page when looking at its layout.<br>
-          The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
-        </p>
-        <div class="p-images">
-          <div class="p-img"></div>
-          <div class="p-img"></div>
-          <div class="p-img"></div>
-          <div class="p-img"></div>
-          <div class="p-img"></div>
-          <div class="p-img"></div>
+        <div class="container">
+          <h2>Portfolio</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.<br>
+            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+          </p>
+          <div class="p-images">
+            <div class="p-img"></div>
+            <div class="p-img"></div>
+            <div class="p-img"></div>
+            <div class="p-img"></div>
+            <div class="p-img"></div>
+            <div class="p-img"></div>
+          </div>
         </div>
       </div>
       <!-- Feature -->
@@ -65,7 +68,7 @@
         </p>
         <div class="strengths">
           <div class="strength">
-            <i class="fas fa-code icon"></i>
+            <i class="fas fa-code c-icon"></i>
             <h6>Strength1</h6>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
           </div>
@@ -84,24 +87,26 @@
 
       <!-- Profile -->
       <div class="profile" id="Profile">
-        <h2>Profile</h2>
-        <p>
-          It is a long established fact that a reader will be distracted by the readable<br>
-          content of a page when looking at its layout.<br>
-          The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
-        </p>
-        <div class="profile-container">
-          <div class="image-container">
-            <div class="profile-image"></div>
-          </div>
-          <div class="profile-content">
-            <div class="name">
-              <h6>MyName</h6>
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+        <div class="container">
+          <h2>Profile</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.<br>
+            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+          </p>
+          <div class="profile-container" id="profile-c">
+            <div class="image-container">
+              <div class="profile-image"></div>
             </div>
-            <div class="skill">
-              <h6>MySkills</h6>
-              <p>HTML/CSS,JavaScript,JQuery,PhotoShop</p>
+            <div class="profile-content">
+              <div class="name">
+                <h6>MyName</h6>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+              </div>
+              <div class="skill">
+                <h6>MySkills</h6>
+                <p>HTML/CSS,JavaScript,JQuery,PhotoShop</p>
+              </div>
             </div>
           </div>
         </div>
