[Finish]ハンバーガーメニュー作成

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <script src="https://kit.fontawesome.com/b2cb5fa4fa.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MySite</title>
@@ -13,6 +14,12 @@
     <!-- ヘッダー -->
     <header>
       <nav>
+        <div class="hamburger">
+          <input type="checkbox" id="menu-btn-check">
+          <label for="menu-btn-check" class="menu-btn">
+            <span></span>
+          </label>
+        </div>
         <a class="noline" id="nav-image" href="#main-v">
           <img class="nav-img" src="img/logo.png">
         </a>
